---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 100000
@main(v0: int) {
  c1_: int = const 2;
  v2_: int = mul c1_ v0;
  v3_: bool = lt c1_ v2_;
  v4_: ptr<int> = alloc v2_;
  c5_: int = const 1;
  v6_: ptr<int> = ptradd v4_ c5_;
  c7_: int = const 0;
  store v4_ c7_;
  store v6_ c5_;
  v8_: ptr<int> = id v4_;
  v9_: int = id c1_;
  v10_: int = id v2_;
  br v3_ .b11_ .b12_;
.b11_:
  v13_: ptr<int> = id v4_;
  v14_: int = id c1_;
  v15_: int = id v2_;
.b16_:
  c17_: int = const 1;
  v18_: int = add c17_ v14_;
  v19_: ptr<int> = ptradd v13_ v18_;
  c20_: int = const -1;
  v21_: int = add c20_ v18_;
  v22_: ptr<int> = ptradd v13_ v21_;
  v23_: ptr<int> = ptradd v13_ v14_;
  v24_: ptr<int> = ptradd v23_ c20_;
  v25_: int = load v24_;
  v26_: int = add c17_ v25_;
  store v23_ v26_;
  v27_: int = load v22_;
  v28_: int = add c17_ v27_;
  store v19_ v28_;
  v29_: int = add c17_ v18_;
  v30_: bool = lt v29_ v15_;
  v13_: ptr<int> = id v13_;
  v14_: int = id v29_;
  v15_: int = id v15_;
  br v30_ .b16_ .b31_;
.b31_:
  v8_: ptr<int> = id v13_;
  v9_: int = id v14_;
  v10_: int = id v15_;
  v32_: ptr<int> = ptradd v8_ v9_;
  c33_: int = const -1;
  v34_: ptr<int> = ptradd v32_ c33_;
  v35_: int = load v34_;
  free v8_;
  print v35_;
  ret;
  jmp .b36_;
.b12_:
  v32_: ptr<int> = ptradd v8_ v9_;
  c33_: int = const -1;
  v34_: ptr<int> = ptradd v32_ c33_;
  v35_: int = load v34_;
  free v8_;
  print v35_;
  ret;
.b36_:
}
